nginx-service-mesh/nginx-mesh-services-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-mesh-ingress-for-default-services
  namespace: nginx-mesh
spec:
  ingressClassName: nginx
  rules:
    - host: zipkin.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
    - host: prometheus.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
